begin column after toc

--- a/notes/01_pca/tutorial.tex
+++ b/notes/01_pca/tutorial.tex
@@ -17,12 +17,7 @@
 
 \maxdeadcycles=1000 % Workaround for ! Output loop---100 consecutive dead cycles because of too many figures
 
-% The following use of algroithms does not work well with the notes:
-%
-%
-%
-%
-% instead use the following for your algorithms:
+% The following use of algroithms is recommended for the notes:
 %
 %\begin{figure}[!t]
 %\removelatexerror
@@ -44,23 +39,22 @@
 
 \ttopic{\tutorialtitle}
 
+\begin{frame}
+    \titlepage
+\end{frame}
+
+\begin{frame}
+    \tableofcontents[subsubsectionstyle=hide]
+\end{frame}
+
+\newpage
+
 \columnratio{0.2,0.8}\textbf{}
 \begin{paracol}{2}
 %\setlength{\columnseprule}{0.1pt}
 %\setlength{\columnsep}{5em}
 
 \begin{rightcolumn}
-
-% notes version will ignore it
-\begin{frame}
-\titlepage
-\end{frame}
-
-\begin{frame}
-\tableofcontents[subsubsectionstyle=hide]
-\end{frame}
-
-\newpage
 
 \mode<all>
 \input{./0_dim}
