variable for left column spacing used for all notes

--- a/notes/00_lagrange/tutorial.tex
+++ b/notes/00_lagrange/tutorial.tex
@@ -15,12 +15,7 @@
 
 %\maxdeadcycles=1000 % Workaround for ! Output loop---100 consecutive dead cycles because of too many figures
 
-% The following use of algroithms does not work well with the notes:
-%
-%
-%
-%
-% instead use the following for your algorithms:
+% The following use of algroithms is recommended for the notes:
 %
 %\begin{figure}[!t]
 %\removelatexerror
@@ -52,7 +47,9 @@
 
 \newpage
 
-\columnratio{0.2,0.8}\textbf{}
+% The variable mycolumnleft is set in the minotes class
+% The column settings are ignored by the slides
+\columnratio{\mycolumnleft,1-\mycolumnleft}
 \begin{paracol}{2}
 %\setlength{\columnseprule}{0.1pt}
 %\setlength{\columnsep}{5em}
