--- a/notes/01_pca/tutorial.tex
+++ b/notes/01_pca/tutorial.tex
@@ -49,7 +49,9 @@
 
 \newpage
 
-\columnratio{0.2,0.8}\textbf{}
+% The variable mycolumnleft is set in the minotes class
+% The column settings are ignored by the slides
+\columnratio{\mycolumnleft,1-\mycolumnleft}
 \begin{paracol}{2}
 %\setlength{\columnseprule}{0.1pt}
 %\setlength{\columnsep}{5em}
