--- a/notes/04_density-transform/tutorial.tex
+++ b/notes/04_density-transform/tutorial.tex
@@ -16,12 +16,7 @@
 
 %\maxdeadcycles=1000 % Workaround for ! Output loop---100 consecutive dead cycles because of too many figures
 
-% The following use of algroithms does not work well with the notes:
-%
-%
-%
-%
-% instead use the following for your algorithms:
+% The following use of algroithms is recommended for the notes:
 %
 %\begin{figure}[!t]
 %\removelatexerror
@@ -43,14 +38,6 @@
 
 \ttopic{\tutorialtitle}
 
-\columnratio{0.2,0.8}\textbf{}
-\begin{paracol}{2}
-%\setlength{\columnseprule}{0.1pt}
-%\setlength{\columnsep}{5em}
-
-\begin{rightcolumn}
-
-% notes version will ignore it
 \begin{frame}
 \titlepage
 \end{frame}
@@ -60,6 +47,15 @@
 \end{frame}
 
 \newpage
+
+% The variable mycolumnleft is set in the minotes class
+% The column settings are ignored by the slides
+\columnratio{\mycolumnleft,1-\mycolumnleft}
+\begin{paracol}{2}
+%\setlength{\columnseprule}{0.1pt}
+%\setlength{\columnsep}{5em}
+
+\begin{rightcolumn}
 
 \mode<all>
 \input{./0_ica_problem}
