--- a/notes/06_fastica/tutorial.tex
+++ b/notes/06_fastica/tutorial.tex
@@ -16,12 +16,7 @@
 
 %\maxdeadcycles=1000 % Workaround for ! Output loop---100 consecutive dead cycles because of too many figures
 
-% The following use of algroithms does not work well with the notes:
-%
-%
-%
-%
-% instead use the following for your algorithms:
+% The following use of algroithms is recommended for the notes:
 %
 %\begin{figure}[!t]
 %\removelatexerror
@@ -33,7 +28,6 @@
 %\end{figure}
 %\begin{algorithm}
 % Below is the definition for the command \removelatexerror:
-\makeatletter
 \newcommand{\removelatexerror}{\let\@latex@error\@gobble}
 \makeatother
 
@@ -43,14 +37,6 @@
 
 \ttopic{\tutorialtitle}
 
-\columnratio{0.2,0.8}\textbf{}
-\begin{paracol}{2}
-%\setlength{\columnseprule}{0.1pt}
-%\setlength{\columnsep}{5em}
-
-\begin{rightcolumn}
-
-% notes version will ignore it
 \begin{frame}
 \titlepage
 \end{frame}
@@ -65,6 +51,15 @@
 \end{frame}
 
 \newpage
+
+% The variable mycolumnleft is set in the minotes class
+% The column settings are ignored by the slides
+\columnratio{\mycolumnleft,1-\mycolumnleft}
+\begin{paracol}{2}
+%\setlength{\columnseprule}{0.1pt}
+%\setlength{\columnsep}{5em}
+
+\begin{rightcolumn}
 
 \mode<all>
 \input{./0_recap_ica_whitening}
