--- a/notes/11_density-est/tutorial.tex
+++ b/notes/11_density-est/tutorial.tex
@@ -16,12 +16,7 @@
 
 \maxdeadcycles=1000 % Workaround for ! Output loop---100 consecutive dead cycles because of too many figures
 
-% The following use of algroithms does not work well with the notes:
-%
-%
-%
-%
-% instead use the following for your algorithms:
+% The following use of algroithms is recommended for the notes:
 %
 %\begin{figure}[!t]
 %\removelatexerror
@@ -43,14 +38,6 @@
 
 \ttopic{\tutorialtitle}
 
-\columnratio{0.2,0.8}\textbf{}
-\begin{paracol}{2}
-%\setlength{\columnseprule}{0.1pt}
-%\setlength{\columnsep}{5em}
-
-\begin{rightcolumn}
-
-% notes version will ignore it
 \begin{frame}
 \titlepage
 \end{frame}
@@ -64,6 +51,13 @@
 \tableofcontents
 }
 \end{frame}
+
+\columnratio{0.2,0.8}\textbf{}
+\begin{paracol}{2}
+%\setlength{\columnseprule}{0.1pt}
+%\setlength{\columnsep}{5em}
+
+\begin{rightcolumn}
 
 \newpage
 
